kustomize/parlasite-vii/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parlasite-vii
  labels:
    app: parlasite-vii
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parlasite-vii
  template:
    metadata:
      labels:
        app: parlasite-vii
    spec:
      containers:
        - name: parlasite-vii
          image: parlasite-slovenija
          ports:
            - containerPort: 3066
          resources:
            requests:
              memory: 75Mi
              cpu: 50m
            limits:
              memory: 75Mi
              cpu: 50m
